Updated index.html with links to ESlutC Contest 3

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <td><a>Coming this weekend!</a></td>
-                                    <td><a>Now as website!</a></td>
+                                    <td><a href="https://www.reddit.com/r/CelebEconomy/comments/ytqx1j/eurovision_slut_contest_3_with_new_presentation/">Live from Bucharest!</a></td>
+                                    <td><a href="https://tarn-rep.github.io/eslutc/contest03.html">Now as website!</a></td>
                                 </tr>
                             </tbody>
                             <tfoot class="table-group-divider">
