Add target="_blank" to all links in index.html.

--- a/index.html
+++ b/index.html
@@ -43,22 +43,25 @@
                             <tbody class="table-group-divider">
                                 <tr>
                                     <td>1</td>
-                                    <td><a
+                                    <td><a target="_blank"
                                             href="https://www.reddit.com/r/CelebEconomy/comments/y53zyv/eurovision_slut_contest_1/">The
                                             first edition</a></td>
-                                    <td><a href="https://ibb.co/rkr4h45">imgbb</a></td>
+                                    <td><a target="_blank" href="https://ibb.co/rkr4h45">imgbb</a></td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td><a
+                                    <td><a target="_blank"
                                             href="https://www.reddit.com/r/CelebEconomy/comments/yhlm9h/eurovision_slut_contest_2/">Do
                                             it again!</a></td>
-                                    <td><a href="https://imgur.com/a/iLwBnXj">imgur</a></td>
+                                    <td><a target="_blank" href="https://imgur.com/a/iLwBnXj">imgur</a></td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <td><a href="https://www.reddit.com/r/CelebEconomy/comments/ytqx1j/eurovision_slut_contest_3_with_new_presentation/">Live from Bucharest!</a></td>
-                                    <td><a href="https://tarn-rep.github.io/eslutc/contest03.html">Now as website!</a></td>
+                                    <td><a target="_blank"
+                                            href="https://www.reddit.com/r/CelebEconomy/comments/ytqx1j/eurovision_slut_contest_3_with_new_presentation/">Live
+                                            from Bucharest!</a></td>
+                                    <td><a target="_blank" href="https://tarn-rep.github.io/eslutc/contest03.html">Now
+                                            as website!</a></td>
                                 </tr>
                             </tbody>
                             <tfoot class="table-group-divider">
@@ -85,10 +88,10 @@
                             <tbody class="table-group-divider">
                                 <tr>
                                     <td>Wet Dream Wrestling</td>
-                                    <td><a
+                                    <td><a target="_blank"
                                             href="https://www.reddit.com/r/CelebEconomy/comments/w8fq6c/wet_dream_wrestling/">Link</a>
                                     </td>
-                                    <td><a href="https://imgur.com/VWy3DRP">Imgur</a></td>
+                                    <td><a target="_blank" href="https://imgur.com/VWy3DRP">Imgur</a></td>
                                 </tr>
                                 <tr>
                                     <td colspan="3"><small>An RNG game where you try to best pro wrestlers in the ring
@@ -99,7 +102,7 @@
                                 <tr>
                                     <td>Womankind</td>
                                     <td>in pre-production</td>
-                                    <td><a href="https://ibb.co/T20F7X4">Sneak peak on IBB</a></td>
+                                    <td><a target="_blank" href="https://ibb.co/T20F7X4">Sneak peak on IBB</a></td>
                                 </tr>
                                 <tr>
                                     <td colspan="3"><small>Inspired by the video game Humankind, guide a civilization
@@ -117,7 +120,7 @@
             </div>
         </div>
         <div class="row pt-4 text-center">
-            <p class="small">Using <a href="https://getbootstrap.com/">Bootstrap</a> to make it look decent quickly</p>
+            <p class="small">Using <a target="_blank" href="https://getbootstrap.com/">Bootstrap</a> to make it look decent quickly</p>
         </div>
     </div>
 </body>
