Fixed the link in the footer to point to github.io page.

--- a/eslutc/contest03.html
+++ b/eslutc/contest03.html
@@ -1183,7 +1183,7 @@
   <!-- Footer -->
   <div>
     <p class="text-footer">
-      &copy;2022 <a target="_blank" href="https://tarn-rep.neocities.org/">tarn_rep</a>
+      &copy;2022 <a target="_blank" href="https://tarn-rep.github.io/">tarn_rep</a>
   </div>
 </body>
 
