--- a/wdw/backlash.html
+++ b/wdw/backlash.html
@@ -62,6 +62,8 @@
     </div>
 
     <div class="wrestler-grid" id="grid">
+      <!-- Beginning of header row -->
+
       <div></div>
       <div>
         <h2 class="grid-top highlight">1</h2>
@@ -82,33 +84,43 @@
         <h2 class="grid-top highlight">6</h2>
       </div>
 
+      <!-- Beginning of second row (rolled 1 for row) -->
+
       <div>
         <h2 class="grid-left highlight">1</h2>
       </div>
+
+      <!-- Wrestler 1-1 -->
       <div>
         <div
           class="grid-background"
           data-target="gallery11"
           data-toggle="modal"
         >
-          <p class="grid-name" data-target="gallery11" data-toggle="modal">
-            Athena Mathena
-          </p>
-          <img
-            class="grid-image"
-            data-target="gallery11"
-            data-toggle="modal"
-            src="img/02/athena.jpg"
-          /><br />
-
-          <p class="grid-skill">10
-          <img
-            class="grid-logo"
-            data-target="gallery11"
-            data-toggle="modal"
-            src="img/logos/AEW.jpg"
-          />
-        </p>
+          <div>
+            <p class="grid-name" data-target="gallery11" data-toggle="modal">
+              Athena Mathena
+            </p>
+          </div>
+          <div>
+            <img
+              class="grid-image"
+              data-target="gallery11"
+              data-toggle="modal"
+              src="img/02/athena.jpg"
+            />
+          </div>
+          <div>
+            <p class="grid-skill">
+              10
+              <img
+                class="grid-logo"
+                data-target="gallery11"
+                data-toggle="modal"
+                src="img/logos/AEW.jpg"
+              />
+            </p>
+          </div>
         </div>
         <div class="modal" id="gallery11">
           <div class="modal-window">
@@ -118,6 +130,90 @@
           </div>
         </div>
       </div>
+
+      <!-- Wrestler 1-2 -->
+      <div>
+        <div
+          class="grid-background"
+          data-target="gallery11"
+          data-toggle="modal"
+        >
+          <div>
+            <p class="grid-name" data-target="gallery11" data-toggle="modal">
+              Athena<br>&nbsp;
+            </p>
+          </div>
+          <div>
+            <img
+              class="grid-image"
+              data-target="gallery11"
+              data-toggle="modal"
+              src="img/02/athena.jpg"
+            />
+          </div>
+          <div>
+            <p class="grid-skill">
+              10
+              <img
+                class="grid-logo"
+                data-target="gallery11"
+                data-toggle="modal"
+                src="img/logos/AEW.jpg"
+              />
+            </p>
+          </div>
+        </div>
+        <div class="modal" id="gallery11">
+          <div class="modal-window">
+            <span class="close" data-dismiss="modal">&times;</span>
+            <p>Test. Test. This is a test.</p>
+            <img class="" src="img/logos/AEW.jpg" />
+          </div>
+        </div>
+      </div>
+      
+      <!-- Wrestler 1-3 -->
+      <div>
+        <div
+          class="grid-background"
+          data-target="gallery13"
+          data-toggle="modal"
+        >
+          <div>
+            <p class="grid-name" data-target="gallery11" data-toggle="modal">
+              Utami Hayashishita
+            </p>
+          </div>
+          <div>
+            <img
+              class="grid-image"
+              data-target="gallery13"
+              data-toggle="modal"
+              src="img/02/athena.jpg"
+            />
+          </div>
+          <div>
+            <p class="grid-skill">
+              10
+              <img
+                class="grid-logo"
+                data-target="gallery13"
+                data-toggle="modal"
+                src="img/logos/STARDOM.jpg"
+              />
+            </p>
+          </div>
+        </div>
+        <div class="modal" id="gallery13">
+          <div class="modal-window">
+            <span class="close" data-dismiss="modal">&times;</span>
+            <p>Let's see how we can handle Utami Hayashishita's long-ass last name.</p>
+            <img class="" src="img/logos/STARDOM.jpg" />
+          </div>
+        </div>
+      </div>
+
+    <!-- End of grid -->
     </div>
 
     <div class="text-block">
